<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Calculadora de sueldo</string>
    <string name="titulo_principal">Calculadora de sueldo total</string>
    <string name="subtitulo_principal">Registre trabajadores y calcule su sueldo total.</string>
    <string name="boton_registro">Registrar</string>
    <string name="boton_lista">Trabajadores</string>
    <string name="registro_titulo">Nuevo trabajador</string>
    <string name="registro_descripcion">Complete los datos y seleccione el área y el sistema de pensión.</string>
    <string name="hint_nombre">Nombre del trabajador</string>
    <string name="hint_sueldo_base">Sueldo base</string>
    <string name="hint_bono">Bono</string>
    <string name="label_area">Área</string>
    <string name="label_pension">Sistema de pensión</string>
    <string name="pension_afp">AFP (10%)</string>
    <string name="pension_onp">ONP (13%)</string>
    <string name="boton_calcular">Calcular</string>
    <string name="error_sueldo_base">Ingrese un sueldo base mayor que cero</string>
    <string name="error_bono">Ingrese el bono</string>
    <string name="error_area">Seleccione un área</string>
    <string name="error_pension">Seleccione AFP u ONP</string>
    <string name="area_placeholder">Seleccione un área</string>
    <string name="area_gerencia">Gerencia</string>
    <string name="area_administracion">Administración</string>
    <string name="area_operaciones">Operaciones</string>
    <string name="sueldo_moneda">S/.</string>
    <string name="error_guardar_trabajador">No se pudo guardar el trabajador</string>
    <string name="lista_vacia">Aún no hay trabajadores registrados.</string>
    <string name="codigo_formato">Trabajador #%1$d</string>
    <string name="sueldo_formato">S/ %.2f</string>
    <string name="area_formato">Área: %1$s</string>
    <string name="dialogo_editar_titulo">Editar trabajador #%1$d</string>
    <string name="dialogo_guardar">Guardar cambios</string>
    <string name="dialogo_cancelar">Cancelar</string>
    <string name="dialogo_eliminar_titulo">Eliminar trabajador</string>
    <string name="dialogo_eliminar_mensaje">¿Desea eliminar a %1$s (trabajador #%2$d)?</string>
    <string name="dialogo_eliminar_confirmar">Eliminar</string>
    <string name="error_actualizar_trabajador">No fue posible actualizar el trabajador.</string>
    <string name="error_eliminar_trabajador">No fue posible eliminar el trabajador.</string>
    <string name="codigo_inicial">Trabajador #0</string>
    <string name="nombre_inicial">Nombre de trabajador</string>
    <string name="sueldo_inicial">S/ 0.00</string>
    <string name="area_inicial">Área</string>
    <string name="error_nombre">Ingrese el nombre del trabajador</string>
    <dimen name="spinner_item_padding">14dp</dimen>




</resources>
