<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dialog_padding">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutNombreEditar"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_medium"
            android:hint="@string/hint_nombre">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextNombreEditar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutSueldoBaseEditar"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_medium"
            android:hint="@string/hint_sueldo_base"
            app:suffixText="@string/sueldo_moneda">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextSueldoBaseEditar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutBonoEditar"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_medium"
            android:hint="@string/hint_bono"
            app:suffixText="@string/sueldo_moneda">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextBonoEditar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_medium"
            android:text="@string/label_pension"
            android:textColor="@color/azul_oscuro"
            android:textSize="@dimen/text_body"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroupPensionEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioAfpEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pension_afp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioOnpEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pension_onp" />
        </RadioGroup>

        <TextView
            android:id="@+id/textViewErrorPensionEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_pension"
            android:textColor="@color/error"
            android:textSize="@dimen/text_caption"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_medium"
            android:labelFor="@id/autoCompleteAreaEditar"
            android:text="@string/label_area"
            android:textColor="@color/azul_oscuro"
            android:textSize="@dimen/text_body"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutAreaEditar"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_small"
            app:endIconMode="dropdown_menu">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/autoCompleteAreaEditar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>