<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_panel_hero"
        android:orientation="vertical"
        android:padding="@dimen/card_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_principal"
            android:textColor="@color/blanco"
            android:textSize="@dimen/text_title"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_small"
            android:text="@string/subtitulo_principal"
            android:textColor="@color/blanco_suave"
            android:textSize="@dimen/text_body" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap_medium"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonRegistro"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginEnd="@dimen/gap_small"
            android:layout_weight="1"
            android:backgroundTint="@color/azul_suave"
            android:text="@string/boton_registro"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLista"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/gap_small"
            android:layout_weight="1"
            android:backgroundTint="@color/azul_suave"
            android:text="@string/boton_lista"
            android:textAllCaps="false" />
    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/gap_medium"
        android:layout_weight="1" />
</LinearLayout>
